[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/fonts/Montserrat/Montserrat-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/placeholder/PH_BLACK.png" type="Texture" id=2]
[ext_resource path="res://assets/placeholder/PH_GREEN.png" type="Texture" id=3]
[ext_resource path="res://assets/buttons/checkmark.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/SubHeadingButtonsFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/placeholder/PH_ORANGE.png" type="Texture" id=6]
[ext_resource path="res://assets/buttons/cross.png" type="Texture" id=7]
[ext_resource path="res://assets/buttons/gear.png" type="Texture" id=8]
[ext_resource path="res://assets/buttons/question.png" type="Texture" id=9]
[ext_resource path="res://scripts/titlescreen/buttons.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 160
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 6
font_data = ExtResource( 1 )

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PH_BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="MainVBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
rect_min_size = Vector2( 1080, 2340 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MainVBox"]
margin_right = 1080.0
margin_bottom = 777.0
rect_min_size = Vector2( 1080, 300 )
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "PH_TITLE"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PH_LOGO" type="TextureRect" parent="MainVBox"]
margin_top = 781.0
margin_right = 1080.0
margin_bottom = 1558.0
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="GridContainer" parent="MainVBox"]
margin_top = 1562.0
margin_right = 1080.0
margin_bottom = 2340.0
size_flags_vertical = 3
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 2
script = ExtResource( 10 )

[node name="Quit" type="TextureButton" parent="MainVBox/Buttons"]
modulate = Color( 1, 0.0980392, 0.0980392, 1 )
margin_right = 535.0
margin_bottom = 379.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="Options" type="TextureButton" parent="MainVBox/Buttons"]
modulate = Color( 0, 0.588235, 1, 1 )
margin_left = 545.0
margin_right = 1080.0
margin_bottom = 379.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="About" type="TextureButton" parent="MainVBox/Buttons"]
modulate = Color( 1, 1, 0, 1 )
margin_top = 389.0
margin_right = 535.0
margin_bottom = 768.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="Play" type="TextureButton" parent="MainVBox/Buttons"]
modulate = Color( 0.0980392, 0.666667, 0, 1 )
margin_left = 545.0
margin_top = 389.0
margin_right = 1080.0
margin_bottom = 768.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="ConfirmationDialog" type="Popup" parent="MainVBox/Buttons"]
margin_top = 524.0
margin_right = 1080.0
margin_bottom = 776.0
rect_min_size = Vector2( 1080, 70 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PH_BG" type="TextureRect" parent="MainVBox/Buttons/ConfirmationDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainVBox/Buttons/ConfirmationDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainVBox/Buttons/ConfirmationDialog/VBoxContainer"]
margin_right = 1080.0
margin_bottom = 124.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
text = "Are you sure?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choices" type="HBoxContainer" parent="MainVBox/Buttons/ConfirmationDialog/VBoxContainer"]
margin_top = 128.0
margin_right = 1080.0
margin_bottom = 252.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yes" type="TextureButton" parent="MainVBox/Buttons/ConfirmationDialog/VBoxContainer/Choices"]
modulate = Color( 0.0980392, 0.666667, 0, 1 )
margin_right = 538.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="No" type="TextureButton" parent="MainVBox/Buttons/ConfirmationDialog/VBoxContainer/Choices"]
modulate = Color( 1, 0.0980392, 0.0980392, 1 )
margin_left = 542.0
margin_right = 1080.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MainVBox/Buttons/Quit" to="MainVBox/Buttons" method="_on_Quit_pressed"]
[connection signal="pressed" from="MainVBox/Buttons/Options" to="MainVBox/Buttons" method="_on_Options_pressed"]
[connection signal="pressed" from="MainVBox/Buttons/About" to="MainVBox/Buttons" method="_on_About_pressed"]
[connection signal="pressed" from="MainVBox/Buttons/Play" to="MainVBox/Buttons" method="_on_Play_pressed"]
[connection signal="popup_hide" from="MainVBox/Buttons/ConfirmationDialog" to="MainVBox/Buttons" method="_on_ConfirmationDialog_popup_hide"]
[connection signal="pressed" from="MainVBox/Buttons/ConfirmationDialog/VBoxContainer/Choices/Yes" to="MainVBox/Buttons" method="_on_Yes_pressed"]
[connection signal="pressed" from="MainVBox/Buttons/ConfirmationDialog/VBoxContainer/Choices/No" to="MainVBox/Buttons" method="_on_No_pressed"]
